add persistence repository and initial model

--- a/todo/todo-service/pom.xml
+++ b/todo/todo-service/pom.xml
@@ -17,9 +17,13 @@
   </properties>
 
 
-  <dependency>
+  <dependencies>
+
+    <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-  </dependency>
+    </dependency>
+
+  </dependencies>
 
 </project>
