--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -12,8 +12,28 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <junit.version>3.8.1</junit.version>
+    <junit.version>4.11</junit.version>
+    <hibernate.version>4.2.1.Final</hibernate.version>
+    <hibernate-jpa.version>1.0.0.Final</hibernate-jpa.version>
+    <spring-data-jpa.version>1.4.1.RELEASE</spring-data-jpa.version>
+    <h2.version>1.3.172</h2.version>
+    <spring-orm.version>4.0.0.RC1</spring-orm.version>
+    <spring-jdbc.version>3.2.4.RELEASE</spring-jdbc.version>
   </properties>
+
+
+  <repositories>
+    <repository>
+      <id>spring-milestonses</id>
+      <name>spring milestones</name>
+      <url>http://repo.spring.io/libs-milestone</url>
+    </repository>
+    <repository>
+      <id>my-repo2</id>
+      <name>your custom repo</name>
+      <url>http://jarsm2.dyndns.dk</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
@@ -23,6 +43,36 @@
         <version>${junit.version}</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring-jdbc.version}</version>
+      </dependency>
+       <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>${spring-data-jpa.version}</version>
+      </dependency>
+       <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring-orm.version}</version>
+      </dependency>
+       <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-entitymanager</artifactId>
+         <version>${hibernate.version}</version>
+     </dependency>
+     <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <version>${hibernate-jpa.version}</version>
+     </dependency>
     </dependencies>
 
 
