--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -12,19 +12,20 @@
   <url>http://maven.apache.org</url>
 
 
-    <repositories>
+   <!-- <repositories>
         <repository>
             <id>repository.jboss.org-public</id>
             <name>JBoss repository</name>
             <url>https://repository.jboss.org/nexus/content/groups/public</url>
         </repository>
     </repositories>
-
+-->
     <properties>
         <hibernate.version>4.0.1.Final</hibernate.version>
         <mysql.connector.version>5.1.18</mysql.connector.version>
         <slf4j.version>1.6.1</slf4j.version>
-        <spring.version>3.1.0.RELEASE</spring.version>
+        <spring.version>4.0.0.RELEASE</spring.version>
+        <spring.security.version>3.2.0.RELEASE</spring.security.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <unit.version>4.9</unit.version>
         <mockito-core.version>1.8.5</mockito-core.version>
@@ -127,6 +128,22 @@
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
         </dependency>
+         <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
         <!-- Spring Data JPA -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -164,5 +181,6 @@
   <modules>
     <module>todo-persistence</module>
     <module>todo-service</module>
+    <module>todo-web</module>
   </modules>
 </project>
