--- a/todo/todo-web/pom.xml
+++ b/todo/todo-web/pom.xml
@@ -1,20 +1,47 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+   <parent>
     <groupId>com.mtt.ken</groupId>
     <artifactId>todo</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.mtt.ken</groupId>
   <artifactId>todo-web</artifactId>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>todo-web</name>
+  <name>todo-web Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <build>
+    <finalName>todo-web</finalName>
+  </build>
+  
+  
   <dependencies>
-  </dependencies>
+    <dependency>
+        <groupId>com.mtt.ken</groupId>
+        <artifactId>todo-service</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+     <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+     </dependency>
+     <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+     </dependency>
+     <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+    </dependencies>
 </project>
