--- a/todo/todo-web/pom.xml
+++ b/todo/todo-web/pom.xml
@@ -18,6 +18,50 @@
   
   
   <dependencies>
+  
+  
+    <dependency>
+        <groupId>com.jayway.jsonpath</groupId>
+        <artifactId>json-path-assert</artifactId>
+        <version>0.8.1</version>
+        <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-servlet_3.0_spec</artifactId>
+			<version>1.0</version>
+			<scope>test</scope>
+		</dependency>
+    
+    
+<!--     <dependency> -->
+<!--         <groupId>javax.servlet</groupId> -->
+<!--         <artifactId>servlet-api</artifactId> -->
+<!--         <version>3.0</version> -->
+<!--         <scope>test</scope> -->
+<!--     </dependency> -->
+  
+  
+  
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.2.2</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.2.2</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.2.9</version>
+    </dependency>
+  
     <dependency>
         <groupId>com.mtt.ken</groupId>
         <artifactId>todo-service</artifactId>
