--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -12,14 +12,6 @@
   <url>http://maven.apache.org</url>
 
 
-   <!-- <repositories>
-        <repository>
-            <id>repository.jboss.org-public</id>
-            <name>JBoss repository</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
--->
     <properties>
         <hibernate.version>4.0.1.Final</hibernate.version>
         <mysql.connector.version>5.1.18</mysql.connector.version>
@@ -30,6 +22,9 @@
         <unit.version>4.9</unit.version>
         <mockito-core.version>1.8.5</mockito-core.version>
         <junit.version>4.9</junit.version>
+        <jaxb.version>2.2.9</jaxb.version>
+        <jackson.version>2.2.2</jackson.version>
+        <h2.version>1.3.160</h2.version>
     </properties>
 
   <dependencies>
@@ -161,18 +156,25 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
-        <!-- H2 Database -->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.160</version>
-        </dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator-annotation-processor</artifactId>
+          <version>${hibernate.version}</version>
+      </dependency>
+        <!-- H2 Database -->
+       <dependency>
+  <groupId>com.h2database</groupId>
+  <artifactId>h2</artifactId>
+  <version>1.3.174</version>
+</dependency>
         <!-- BoneCP -->
         <dependency>
             <groupId>com.jolbox</groupId>
             <artifactId>bonecp</artifactId>
             <version>0.7.1.RELEASE</version>
         </dependency>
+       
+   
        
       
   </dependencies>
