--- a/todo/todo-persistence/pom.xml
+++ b/todo/todo-persistence/pom.xml
@@ -50,5 +50,24 @@
             <groupId>com.jolbox</groupId>
             <artifactId>bonecp</artifactId>
         </dependency>
+        
+        <dependency>
+    <groupId>com.github.springtestdbunit</groupId>
+    <artifactId>spring-test-dbunit</artifactId>
+    <version>1.0.1</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.dbunit</groupId>
+    <artifactId>dbunit</artifactId>
+    <version>2.4.9</version>
+    <scope>test</scope>
+    <exclusions>
+        <exclusion>
+            <artifactId>junit</artifactId>
+            <groupId>junit</groupId>
+        </exclusion>
+    </exclusions>
+</dependency>
 </dependencies>
 </project>
