--- a/todo/todo-persistence/src/main/resources/application.properties
+++ b/todo/todo-persistence/src/main/resources/application.properties
@@ -18,7 +18,9 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.format_sql=true
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=true
+hibernate.hbm2ddl.auto=create
 
 #EntityManager
 #Declares the base package of the entity classes
-entitymanager.packages.to.scan=com.mtt.presistance,model
+entitymanager.packages.to.scan=com.mtt.presistance.model
+                               
