--- a/todo/todo-web/pom.xml
+++ b/todo/todo-web/pom.xml
@@ -14,7 +14,25 @@
   <url>http://maven.apache.org</url>
   <build>
     <finalName>todo-web</finalName>
+    <plugins>
+    <plugin>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>8.1.14.v20131031</version>
+            <configuration>
+                <webApp>
+                    <contextPath>/</contextPath>
+                </webApp>
+                <stopKey>I_CANT_STAND_IT_ANYMORE</stopKey>
+                <stopPort>54124</stopPort>
+            </configuration>
+        </plugin>
+	</plugins>
   </build>
+  
+  <properties>
+    <tomcat.version>7.0.50</tomcat.version>
+  </properties>
   
   
   <dependencies>
@@ -78,4 +96,6 @@
             <artifactId>spring-security-config</artifactId>
         </dependency>
     </dependencies>
+    
+   
 </project>
