--- a/todo/todo-web/pom.xml
+++ b/todo/todo-web/pom.xml
@@ -1,101 +1,86 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-   <parent>
-    <groupId>com.mtt.ken</groupId>
-    <artifactId>todo</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>com.mtt.ken</groupId>
-  <artifactId>todo-web</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>todo-web Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <build>
-    <finalName>todo-web</finalName>
-    <plugins>
-    <plugin>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty-maven-plugin</artifactId>
-            <version>8.1.14.v20131031</version>
-            <configuration>
-                <webApp>
-                    <contextPath>/</contextPath>
-                </webApp>
-                <stopKey>I_CANT_STAND_IT_ANYMORE</stopKey>
-                <stopPort>54124</stopPort>
-            </configuration>
-        </plugin>
-	</plugins>
-  </build>
-  
-  <properties>
-    <tomcat.version>7.0.50</tomcat.version>
-  </properties>
-  
-  
-  <dependencies>
-  
-  
-    <dependency>
-        <groupId>com.jayway.jsonpath</groupId>
-        <artifactId>json-path-assert</artifactId>
-        <version>0.8.1</version>
-        <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-			<groupId>org.apache.geronimo.specs</groupId>
-			<artifactId>geronimo-servlet_3.0_spec</artifactId>
-			<version>1.0</version>
-			<scope>test</scope>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.mtt.ken</groupId>
+		<artifactId>todo</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<groupId>com.mtt.ken</groupId>
+	<artifactId>todo-web</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>todo-web Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<build>
+		<finalName>todo-web</finalName>
+	</build>
+
+	<properties>
+		<tomcat.version>7.0.50</tomcat.version>
+	</properties>
+
+
+	<dependencies>
+
+
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path-assert</artifactId>
+			<version>0.8.1</version>
 		</dependency>
-  
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    
-    <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>2.2.9</version>
-    </dependency>
-  
-    <dependency>
-        <groupId>com.mtt.ken</groupId>
-        <artifactId>todo-service</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </dependency>
-     <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-     </dependency>
-     <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-     </dependency>
-     <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-config</artifactId>
-        </dependency>
-    </dependencies>
-    
-   
+
+		<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
+    <scope>provided</scope>
+</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mtt.ken</groupId>
+			<artifactId>todo-service</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+	</dependencies>
+
+
 </project>
