--- a/todo/todo-web/src/main/webapp/WEB-INF/web.xml
+++ b/todo/todo-web/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,35 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  
+  <context-param>
+<param-name>contextConfigLocation</param-name>
+<param-value>
+	/webapp/WEB-INF/rest-servlet.xml
+</param-value>
+</context-param>
+	
+<!-- This listener will load other application context file in addition to 
+            rest-servlet.xml -->
+<listener>
+<listener-class>
+	org.springframework.web.context.ContextLoaderListener
+</listener-class>
+</listener>
+	
+<servlet>
+<servlet-name>rest</servlet-name>
+<servlet-class>
+	org.springframework.web.servlet.DispatcherServlet
+</servlet-class>
+<load-on-startup>1</load-on-startup>
+</servlet>
+
+<servlet-mapping>
+<servlet-name>rest</servlet-name>
+<url-pattern>/service/*</url-pattern>
+</servlet-mapping>
+  
+  
 </web-app>
