--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -8,7 +8,7 @@
   <packaging>pom</packaging>
 
   <name>todo parent project</name>
-   <description>Spring Data 1 JPA Tutorial Part One</description>
+   <description>Spring Data 1  J:JPA Tutorial Part One</description>
   <url>http://maven.apache.org</url>
 
 
